# EntRAG

./: .gitignore  README.md  pyproject.toml
.github/workflows/: cicd.yaml
data/: .gitignore  processed.json
data/entrag_test/: Annual_Report_2020.md  Annual_Report_2021.md  Annual_Report_2022.md  Annual_Report_2023.md  Annual_Report_2024.md
datasets/: 20250301-entrag-dev.json  20250319-entrag-dev.json
evaluation_configs/default/: config.yaml
evaluation_configs/testlm_rag/: config.yaml
scripts/: document-ingestion.py
src/entrag/: __init__.py  evaluation.py  evaluator_utils.py  main.py
src/entrag/api/: model.py
src/entrag/config/: evaluation_config.py
src/entrag/data_model/: document.py  question_answer.py
src/entrag/evaluators/: __init__.py
src/entrag/models/: openai_rag.py  testlm_rag.py
src/entrag/preprocessing/: create_chunks.py
src/entrag/prompts/: default_prompts.py
src/entrag/tasks/: question_answering.py
src/entrag/utils/: prompt.py
src/entrag/visualization/: __init__.py
