[project]
name = "entrag-root"
version = "0.0.0"
description = "EntRAG - Enterprise RAG Benchmark"
authors = [
    { name = "Fabio Kapsahili", email = "fabio.kapsahili@protonmail.com" },
]
readme = "README.md"
requires-python = ">=3.12,<3.13"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
entrag = { workspace = true }
entrag-mock-api = { workspace = true }

[tool.uv]
dev-dependencies = [
    "entrag",
    "entrag-mock-api",
]

[tool.ruff]
line-length = 119
exclude = ["**/*.ipynb"]

lint.ignore = ["E501", "C901", "F841"]
lint.select = ["C", "E", "F", "I", "W"]
lint.fixable = ["A", "B", "C", "D", "E", "F", "I", "W"]
preview = true

target-version = "py312"

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["entrag", "entrag_mock_api"]
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"