[project]
name = "entrag-root"
version = "0.0.0"
description = "EntRAG - Enterprise RAG Benchmark"
authors = [
    { name = "Fabio Kapsahili", email = "fabio.kapsahili@protonmail.com" },
]
readme = "README.md"
requires-python = ">=3.12,<3.13"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
entrag = { workspace = true }
entrag-mock-api = { workspace = true }

[tool.uv]
dev-dependencies = ["poethepoet>=0.34.0"]

[tool.ruff]
line-length = 119
exclude = ["**/*.ipynb"]

lint.ignore = ["E501", "C901", "F841"]
lint.select = ["C", "E", "F", "I", "W"]
lint.fixable = ["A", "B", "C", "D", "E", "F", "I", "W"]
preview = true

target-version = "py312"

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["entrag", "entrag_mock_api"]
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.poe.tasks]
# Applies code style fixes to the specified file or directory
style = { shell = """
    echo "Applying style fixes to ${file}"
    ruff format ${file}
    ruff check --fix ${file} --line-length 119
    """, args = [{ name = "file", default = "." }] }

# Checks code quality without applying fixes
check = { shell = """
    echo "Checking code quality for ${file} without fixes"
    ruff format --diff ${file}
    ruff check ${file} --line-length 119
    """, args = [{ name = "file", default = "." }] }

# Format and check the entire codebase
style-all = "poe style --file ."

# Check quality of the entire codebase without fixes (for CI)
quality = "poe check --file ."

[dependency-groups]
lint = ["ruff>=0.11.10"]
